comment console log

--- a/01 - JavaScript Drum Kit/index.html
+++ b/01 - JavaScript Drum Kit/index.html
@@ -69,7 +69,7 @@
 
       function endTransition(e) {
         if (e.propertyName === "transform") {
-          console.log(e);
+          // console.log(e);
           e.target.classList.remove("playing");
         }
       }
